load data to mongodb

--- a/netflix_analysis.ipynb
+++ b/netflix_analysis.ipynb
@@ -27,24 +27,95 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1gOTG0WKyjUf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "# Define the mountpoint\n",
+        "mountpoint = '/content/drive'\n",
+        "\n",
+        "# Check if the mountpoint exists and is not empty\n",
+        "if os.path.isdir(mountpoint) and os.listdir(mountpoint):\n",
+        "  print(f\"Mountpoint '{mountpoint}' is not empty. Clearing its contents.\")\n",
+        "  # Remove the contents of the directory\n",
+        "  for filename in os.listdir(mountpoint):\n",
+        "    file_path = os.path.join(mountpoint, filename)\n",
+        "    try:\n",
+        "      if os.path.isfile(file_path) or os.path.islink(file_path):\n",
+        "        os.unlink(file_path)\n",
+        "      elif os.path.isdir(file_path):\n",
+        "        shutil.rmtree(file_path)\n",
+        "    except Exception as e:\n",
+        "      print(f'Failed to delete {file_path}. Reason: {e}')\n",
+        "\n",
+        "# Attempt to mount Google Drive\n",
+        "drive.mount(mountpoint)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fPMcZRvkEn2D",
-        "outputId": "a7c10cc8-ae5f-4aae-9d0a-42b940739352"
+        "outputId": "04e0255a-cd38-40b9-e40b-a5fbf68c1816"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Mountpoint '/content/drive' is not empty. Clearing its contents.\n",
             "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install --quiet pymongo pandas\n",
+        "import pandas as pd\n",
+        "from pymongo import MongoClient\n",
+        "\n",
+        "# 1) Load CSV dari Drive\n",
+        "path = \"/content/drive/MyDrive/Colab_Notebooks/pdds/netflix_movies_detailed_up_to_2025.csv\"\n",
+        "df   = pd.read_csv(path)\n",
+        "\n",
+        "# 2) Connect ke MongoDB remote\n",
+        "uri    = \"mongodb+srv://mongo:mongo@netflix.ueqzu83.mongodb.net/\"\n",
+        "client = MongoClient(uri)\n",
+        "db     = client[\"netflix\"]\n",
+        "col    = db[\"movies\"]\n",
+        "\n",
+        "# 3) Insert ke koleksi (convert DataFrame → dict)\n",
+        "records = df.to_dict(orient=\"records\")\n",
+        "result  = col.insert_many(records)\n",
+        "print(f\"Inserted {len(result.inserted_ids)} documents\")"
+      ],
+      "metadata": {
+        "id": "VWYu1nFqyoAZ",
+        "outputId": "814b1018-9a5f-46a4-9149-684433a8a5c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inserted 16000 documents\n"
           ]
         }
       ]
